@@ -20,8 +20,8 @@ versions << [
   'hadoopCommon': '3.4.1',
   'parquetHadoop': '1.15.0',
   'thrift': '0.22.0',
-  'testcontainers': '1.19.7',
-  'docker': '3.3.6',
+  'testcontainers': '2.0.5',
+  'docker': '3.7.1',
   'ducttape': '1.0.8',
 ]
 
@@ -50,11 +50,29 @@ dependencies {
   testImplementation "org.apache.commons:commons-compress:${versions.commonscompress}"
   testImplementation "org.apache.commons:commons-lang3:${versions.commonslang}"
   testImplementation "commons-io:commons-io:${versions.commonsio}"
+  testImplementation "org.slf4j:slf4j-simple:${versions.slf4j}"
+  testImplementation "org.apache.hadoop:hadoop-minikdc:3.4.3"
+  testImplementation "org.apache.kerby:kerb-simplekdc:2.0.3"
+  testImplementation "org.apache.kerby:kerb-client:2.0.3"
+  testImplementation "org.apache.kerby:kerb-admin:2.0.3"
+  testImplementation "org.apache.kerby:kerb-server:2.0.3"
+  testImplementation "org.apache.kerby:kerb-identity:2.0.3"
+  testImplementation "org.apache.kerby:kerb-common:2.0.3"
+  testImplementation "org.apache.kerby:kerb-util:2.0.3"
+  testImplementation "org.apache.kerby:kerby-config:2.0.3"
+  testImplementation "org.apache.kerby:token-provider:2.0.3"
+  testImplementation "org.apache.kerby:kerb-crypto:2.0.3"
+  testImplementation "org.apache.kerby:kerb-core:2.0.3"
+  testImplementation "org.apache.kerby:kerby-pkix:2.0.3"
+  testImplementation "org.apache.kerby:kerby-xdr:2.0.3"
+  testImplementation "org.apache.kerby:kerby-asn1:2.0.3"
+  testImplementation "org.apache.kerby:kerby-util:2.0.3"
 }
 
 internalClusterTest {
   environment 'TESTCONTAINERS_RYUK_DISABLED', 'true'
   systemProperty 'tests.security.manager', 'false'
+  jvmArgs '--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED'
 }
 
 thirdPartyAudit {
